--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -55,4 +55,122 @@
     height: 881px;
     margin-left: -5px;
     margin-top: -5px;
+    margin-right: -5px;
 }
+
+.header__container_text {
+    margin: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    z-index: 4;
+    width: 542px;
+    height: 444px;
+    margin-top: 124px;
+    margin-left: 348.5px;
+    margin-bottom: 132px;
+}
+
+.header__text {
+    margin: 0;
+    color: rgb(49, 49, 49);
+    font-family: Merriweather;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 110%;
+    letter-spacing: 0px;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.header__text:last-of-type{
+  text-align: center;
+}
+
+.header__signature {
+    color: rgb(49, 49, 49);
+    font-family: Golos Text;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 130%;
+    letter-spacing: 0px;
+    text-align: center;
+}
+
+.button__container {
+    display:  flex;
+    flex-direction:  row;
+}
+
+.button__support {
+position: static;
+width: 263px;
+height: 72px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 20px;
+flex: none;
+order: 0;
+flex-grow: 1;
+box-sizing: border-box;
+border: 2px solid rgb(31, 31, 31);
+background-color: transparent;
+border-radius: 66px;
+margin-right: 16px;
+cursor: pointer;
+font-family: Golos Text;
+font-size: 16px;
+font-weight: 500;
+line-height: 130%;
+letter-spacing: 0px;
+text-align: center;
+}
+
+.button__support:hover{
+    background-color: rgb(31, 31, 31) ;
+    color:  white;
+}
+
+.running__line {
+    display: flex;
+    overflow-x: hidden;
+    width: 1920px;
+ }
+
+ .running__line__incont {
+   animation: marquee 15s infinite linear;
+   white-space: nowrap;
+   position: relative;
+   height: 60px;
+   display: flex;
+   flex-direction: row;
+   justify-content: flex-start;
+   align-items: center;
+   padding: 18px 12px 18px 12px;
+   background: rgb(245, 73, 50);
+   color: rgb(255, 255, 255);
+   font-family: Merriweather;
+   font-size: 22px;
+   font-weight: 400;
+   line-height: 110%;
+   letter-spacing: 0px;
+   text-align: right;
+   text-transform: uppercase;
+ }
+
+ .running__line__incont:after {
+     content: 'Дело помощи утопающим — дело рук самих утопающих! · Шахматы двигают вперед не только культуру, но и экономику! · Лед тронулся, господа присяжные заседатели! ·';
+     white-space: pre;
+ }
+
+@keyframes marquee {
+     0% {
+         transform: translateX(0%);
+     }
+     100% {
+         transform: translateX(-50%);
+     }
+ }
+
