--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,6 @@
 @import url(../blocks/vendor/normalize.css);
 @import url(../blocks/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/main/running__line.css);
+@import url(../blocks/rotation/rotation.css);
+@import url(../blocks/main/poster.css);
