--- a/styles/index.css
+++ b/styles/index.css
@@ -4,3 +4,4 @@
 @import url(../blocks/main/running__line.css);
 @import url(../blocks/rotation/rotation.css);
 @import url(../blocks/main/poster.css);
+@import url(../blocks/main/stage.css);
