--- a/blocks/main/poster.css
+++ b/blocks/main/poster.css
@@ -1,8 +1,8 @@
 .poster {
     margin: 0 auto;
     padding-top: 80px;
+    padding-bottom: 200px;
     background-color: white;
-    min-height: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,15 +15,15 @@
 }
 
 .poster__header {
-margin: 0;
-width: 764px;
- font-family: Merriweather;
-font-size: 36px;
-font-weight: 700;
-line-height: 135%;
-letter-spacing: 0px;
-text-align: left;
-text-transform: uppercase;
+    margin: 0;
+    width: 764px;
+    font-family: Merriweather;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 135%;
+    letter-spacing: 0px;
+    text-align: left;
+    text-transform: uppercase;
 }
 
 .poster__header:last-of-type {
@@ -47,5 +47,109 @@ text-transform: uppercase;
 
 .poster__image {
     margin-right: 44px;
-    margin-left: -185px;
+    margin-left: -125px;
+}
+
+.poster__posterContainer {
+    width: 704px;
+}
+
+.poster__text {
+    margin: 0;
+    padding: 0;
+    display: inline;
+    font-family: Merriweather;
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 135%;
+    letter-spacing: 0px;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.poster__text:nth-child(2) {
+    color: red;
+}
+
+.poster__table {
+    margin: 0;
+    padding: 0;
+    margin-top: 60px;
+    margin-bottom: 48px;
+    display: flex;
+}
+
+.poster__tablePunkts {
+    margin: 0;
+    padding: 0;
+    border-right: 2px solid rgb(208, 208, 208);
+}
+
+.poster__tablePunktsText {
+    margin: 0;
+    padding: 0;
+    width: 290px;
+    padding-bottom: 16px;
+    padding-right: 16px;
+    padding-top: 16px;
+    list-style-type: none;
+    border-bottom: 2px solid rgb(208, 208, 208);
+    opacity: .7;
+    color: rgb(49, 49, 49);
+    font-family: Golos Text;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0px;
+    text-align: left;
+}
+
+.poster__tablePunktsText:nth-child(5) {
+    border-bottom: none;
+}
+
+.poster__tablePunktsText:nth-child(1) {
+    padding-top: 0;
+}
+
+.poster__tablePunktsTextAnswers {
+    margin: 0;
+    padding: 0;
+    width: 398px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    padding-top: 16px;
+    list-style-type: none;
+    border-bottom: 2px solid rgb(208, 208, 208);
+    color: rgb(49, 49, 49);
+    font-family: Golos Text;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0px;
+    text-align: left;
+}
+
+.poster__tablePunktsTextAnswers:nth-child(5) {
+    border-bottom: none;
+}
+
+.poster__tablePunktsTextAnswers:nth-child(1) {
+    padding-top: 0;
+}
+
+.poster__tablePunktsAnswers {
+    margin: 0;
+    padding: 0;
+}
+
+.poster__link {
+    text-decoration: none;
+    color: rgb(48, 87, 162);
+    font-family: Golos Text;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0px;
+    text-align: left;
 }
