--- a/blocks/main/players.css
+++ b/blocks/main/players.css
@@ -77,7 +77,7 @@
 .players_container_all {
     display: flex;
     flex-direction: row;
-    margin-left: 380px;
+    margin-left: 287px;
     margin-top: 30px;
 }
 
@@ -87,19 +87,12 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-}
-
-.player__container:nth-child(1) {
-    margin-left: 0px;
-}
-
-.player__container:nth-child(4) {
-    margin-left: 0px;
+    align-items: center;
 }
 
 .name__player {
     margin: 0;
-    margin-top: 22px;
+    margin-top: 30px;
     color: rgb(49, 49, 49);
     font-family: Golos Text;
     font-size: 24px;
@@ -136,3 +129,43 @@
     line-height: 120%;
     letter-spacing: 0px;
 }
+
+.hide-slide {
+    display: none;
+  }
+
+  @media screen and (max-width: 1680px) {
+    .header__container_players {
+        margin-left: 200px;
+    }
+
+    .players_container_all {
+        margin-left: 150px;
+    }
+  }
+
+  @media screen and (max-width: 1390px) {
+    .header__container_players {
+        margin-left: 72px;
+    }
+
+    .switch__container {
+        margin-right: -225px;
+    }
+
+    .players_container_all {
+        margin-top: 23px;
+        margin-left: 15px;
+    }
+  }
+
+  @media screen and (max-width: 1280px) {
+    .players_container_all {
+        display: grid;
+        grid-template-columns: repeat(2, 394px);
+        justify-content: center;
+        margin-left: -15px;
+    }
+
+}
+
