--- a/blocks/main/poster.css
+++ b/blocks/main/poster.css
@@ -35,6 +35,7 @@
 }
 
 .posterText__container {
+    margin: 0;
     margin-right: 64px;
 }
 
@@ -160,4 +161,61 @@
     letter-spacing: 0px;
     text-align: left;
     margin-left: 2px;
+}
+
+@media screen and (max-width: 1680px) {
+
+    .posterHeader__container {
+        margin-left: -100px;
+    }
+
+    .poster__container {
+        margin-left: -150px;
+    }
+}
+
+@media screen and (max-width: 1390px) {
+
+    .posterHeader__container {
+        margin-left: 0px;
+    }
+
+    .poster__container {
+        margin-left: -45px;
+    }
+
+    .poster__header {
+        margin: 0;
+    }
+
+    .poster__header:last-of-type {
+        margin: 0;
+    }
+
+    .poster__Players {
+        margin-top: -25px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+
+    .posterHeader__container {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .poster__Players {
+        margin-top: 10px;
+    }
+
+    .poster__header {
+        width: 900px;
+    }
+
+    .poster__container {
+        display: flex;
+        flex-direction: column;
+    }
 }
