--- a/blocks/main/running__line.css
+++ b/blocks/main/running__line.css
@@ -40,12 +40,20 @@
  @media screen and (max-width: 1680px) {
 
     .running__line {
-        max-width: 1680px;
+        height: 38px;
      }
 
  }
 
  @media screen and (max-width: 1390px) {
+
+    .running__line {
+        max-width: 1366px;
+     }
+
+ }
+
+ @media screen and (max-width: 970px) {
 
     .running__line {
         max-width: 1366px;
