--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,3 +18,18 @@
     max-width: 1222px;
     margin-left: 50px;
 }
+
+@media screen and (max-width: 970px) {
+    .footer__faq {
+        margin-left: 15px;
+        font-size: 16px;
+font-weight: 400;
+line-height: 120%;
+letter-spacing: 0px;
+text-align: left;
+    }
+
+    .footer {
+        height: 200px;
+    }
+}
