--- a/blocks/main/poster.css
+++ b/blocks/main/poster.css
@@ -252,6 +252,7 @@
 
     .posterHeader__container {
         padding-left: 9px;
+        width: 350px;
     }
 
     .poster__header1 {
@@ -284,8 +285,10 @@
     }
 
     .posterText__container {
+        width: 290px;
         margin-top: -33px;
-        margin-left: 65px;
+        margin-right: 0;
+        margin-left: -40px;
     }
 
     .poster__Players {
@@ -296,11 +299,11 @@
     }
 
     .poster__image {
-        width: 370px;
+        width: 350px;
         height: 400px;
         margin: 0;
         margin-left: 50px;
-        margin-top: -40px;
+        margin-top: -27px;
     }
 
     .poster__posterContainer {
@@ -324,11 +327,13 @@
 
     .poster__table375 {
         margin-top: 30px;
+        margin-bottom: 10px;
         display: inline-block;
         list-style-type: none;
     }
 
     .poster__tablePunkts375 {
+        margin-top: 15px;
         width: 335px;
         padding: 0;
         list-style-type: none;
@@ -373,7 +378,7 @@
     }
 
     .poster__tablePunktsTextAnswers375:nth-child(4) {
-        margin-bottom: 16px;
+        margin-bottom: 12px;
     }
 
     .poster__table {
@@ -393,6 +398,7 @@
         font-weight: 400;
         line-height: 120%;
         letter-spacing: 0px;
+      
     }
 
     .poster__tablePunktsText375:nth-child(5) {
@@ -404,7 +410,7 @@
 
     .poster__tablePunktsText375:nth-child(7) {
         width: 335px;
-        padding-top: 16px;
+        padding-top: 12px;
        border-top: 2px solid rgb(208, 208, 208);
     }
 
@@ -418,6 +424,10 @@
         letter-spacing: 0px;
         padding-bottom: 16px;
         width: 335px;
+    }
+
+    .poster {
+        padding-bottom: 117px;
     }
 }
 
