--- a/blocks/main/stage.css
+++ b/blocks/main/stage.css
@@ -43,6 +43,7 @@
 }
 
 .stage {
+    display: inline-block;
     margin: 0;
     width: 394px;
     height: 112px;
@@ -53,6 +54,7 @@
 }
 
 .stage__image {
+    display: inline-block;
     width: 394px;
     height: 112px;
     position: absolute;
@@ -60,6 +62,7 @@
 }
 
 .stage__image_3 {
+    display: inline-block;
     width: 394px;
     height: 244px;
     position: absolute;
@@ -67,6 +70,7 @@
 }
 
 .stage__image_6 {
+    display: inline-block;
     width: 394px;
     height: 136px;
     position: absolute;
@@ -74,6 +78,7 @@
 }
 
 .stage__image_7 {
+    display: inline-block;
     width: 810px;
     height: 136px;
     position: absolute;
@@ -98,6 +103,7 @@
 }
 
 .stage__number {
+    display: inline-block;
     position: relative;
     margin-left: 20px;
     margin-right: 16px;
@@ -114,6 +120,7 @@
 }
 
 .stage__description {
+    display: inline-block;
     padding: 20px 20px 20px 0px;
     position: relative;
     margin: 0;
@@ -126,6 +133,7 @@
 }
 
 .stage__description_7 {
+    display: inline-block;
     width: 446px;
     padding: 20px 20px 20px 0px;
     position: relative;
@@ -139,11 +147,41 @@
 }
 
 .stage__plane {
+    display: inline-block;
     position: absolute;
-    left: 410px;
-    width: 495px;
-    height: 250px;
+    left: 490px;
+    top: -85px;
+    width: 370px;
+height: 200px;;
     bottom: -16px;
+}
+
+.stages__container375 {
+    display: none;
+}
+
+.stage375 {
+    display: none;
+}
+
+.stage__image375 {
+    display: none;
+}
+
+.stage__number375 {
+    display: none;
+}
+
+.stage__description375 {
+    display: none;
+}
+
+.stage__plane375 {
+    display: none;
+}
+
+.switch375 {
+    display: none;
 }
 
 @media screen and (max-width: 1680px) {
@@ -156,7 +194,7 @@
     }
 }
 
-@media screen and (max-width: 1390px) {
+@media screen and (max-width: 1500px) {
     .stages__header {
         margin-left: 72px;
     }
@@ -170,7 +208,7 @@
     }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1500px) {
     .stages__header {
         margin-left: 50px;
     }
@@ -204,9 +242,9 @@
     .stage__image_3 {
         height: 269px;
         width: 394px;
-        
+
     }
-    
+
     .stage:nth-child(7) {
         grid-column: 1/ 4;
         grid-row: 5/ 5;
@@ -224,5 +262,203 @@
         grid-row: 4/ 5;
         width: 440px;
         height: 112px;
+    }
+}
+
+@media screen and (max-width: 970px) {
+    .stages__containerGrid {
+        display: none;
+    }
+
+    .stage {
+        display: none;
+    }
+
+    .stage__image {
+        display: none;
+    }
+
+    .stage__number {
+        display: none;
+    }
+
+    .stage__description {
+        display: none;
+    }
+
+    .stage__plane {
+        display: none;
+    }
+
+    .stages {
+        padding-bottom: 72px;
+    }
+
+    .stages__header {
+        width: 335px;
+        font-size: 36px;
+        font-weight: 400;
+        line-height: 110%;
+        letter-spacing: 0px;
+        text-align: left;
+        text-transform: uppercase;
+        margin-left: 15px;
+    }
+
+    .stages__link {
+        width: 335px;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 120%;
+        letter-spacing: 0px;
+        text-align: left;
+        margin-top: 15px;
+        margin-left: 0px;
+    }
+
+    .stages__container375 {
+        display: inline-block;
+        margin-top: 145px;
+        margin-left: 17px;
+    }
+
+    .stage375 {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        position: relative;
+        width: 335px;
+        height: 300px;
+        background-color: rgb(233, 222, 212);
+    }
+
+
+    .stage__image375 {
+        margin: 0;
+        padding: 0;
+        display: inline-block;
+        position: absolute;
+        width: 335px;
+        height: 300px;
+        opacity: 0.7;
+    }
+
+    .stage__column_discr {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        margin-top: 62px;
+    }
+
+    .stage__column_discr:last-child {
+        margin: 0;
+        padding: 0;
+        margin-top: 30px
+    }
+
+    .stage__number375 {
+        margin: 0;
+        padding: 0;
+        margin-left: 20px;
+        width: 36px;
+        height: 36px;
+        display: flex;
+        position: relative;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: 0px;
+        border-radius: 60px;
+        background: rgb(255, 255, 255);
+        justify-content: center;
+        align-items: center;
+    }
+
+    .stage__description375 {
+        margin: 0;
+        margin-top: 0px;
+        margin-left: 15px;
+        width: 239px;
+        display: inline;
+        position: relative;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: 120%;
+        letter-spacing: 0px;
+        text-align: left;
+    }
+
+    .stage__description375:nth-child(3) {
+        margin-top: 63px;
+    }
+
+    .stage__number375:nth-child(2) {
+        margin-top: 63px;
+    }
+
+    .stage__plane375 {
+        display: inline-block;
+        position: absolute;
+        overflow: hidden;
+        z-index: 2;
+        margin-top: 30px;
+        margin-left: 30px;
+        width: 317px;
+        height: 150px;
+        transform: rotate(-5deg);
+    }
+
+    .hide__stages {
+        display: none;
+    }
+
+    .switch375 {
+        margin-top: 27px;
+        margin-left: 96px;
+        width: 178px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .arrow375 {
+        padding: 0;
+        margin: 0;
+        width: 60px;
+        height: 36px;
+        background: rgb(49, 49, 49);
+        border-radius: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        border: none;
+    }
+
+    .arrow375:hover {
+        background: rgb(217, 217, 217);
+    }
+
+    .dots {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        bottom: 10px;
+    }
+
+    .dot {
+        margin-left: 6px;
+        background-color: rgb(49, 49, 49);
+        border-radius: 10px;
+        width: 10px;
+        height: 10px;
+    }
+    .dot__gray {
+        background: rgb(217, 217, 217);
+    }
+    
+    .dot:first-child {
+        margin-left: 0px;
     }
 }
